[gd_scene load_steps=2 format=3 uid="uid://editor_toolbar_001"]

[ext_resource type="Script" uid="uid://editor_toolbar_script_001" path="res://Scripts/Editor/editor_toolbar.gd" id="1"]

[node name="EditorToolbar" type="HBoxContainer"]
script = ExtResource("1")

[node name="FileButton" type="MenuButton" parent="."]
layout_mode = 2
text = "File"
flat = false

[node name="InstrumentButton" type="MenuButton" parent="."]
layout_mode = 2
text = "Instrument"
flat = false

[node name="DifficultyButton" type="MenuButton" parent="."]
layout_mode = 2
text = "Difficulty"
flat = false

[node name="SongPropertiesButton" type="Button" parent="."]
layout_mode = 2
text = "Song Properties"
flat = false

[node name="ToolsButton" type="MenuButton" parent="."]
layout_mode = 2
text = "Tools"
flat = false

[node name="OptionsButton" type="MenuButton" parent="."]
layout_mode = 2
text = "Options"
flat = false

[node name="HelpButton" type="MenuButton" parent="."]
layout_mode = 2
text = "Help"
flat = false
